<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/DailogParticipanteNome"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_nome_participante" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_paricipante_cancelar"
            android:id="@+id/dialogParticipanteCancela" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_participante_novoplus"
            android:id="@+id/dialogParticipanteOkMais" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_paricipante_OK"
            android:id="@+id/dialogParticipanteOK"
            android:onClick="AddEFecha" />


    </LinearLayout>

</LinearLayout>