<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nova_viagem"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nomeNovaViagem"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_nome_viagem" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/destinoViagem"
        android:id="@+id/textView2"
        android:layout_below="@+id/nomeNovaViagem"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/destinoNovaViagem"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:hint="Digite o destino" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/participantes"
        android:id="@+id/textView3"
        android:layout_below="@+id/destinoNovaViagem"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_participante"
        android:id="@+id/btCriaParticipante"
        android:layout_below="@+id/destinoNovaViagem"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:focusableInTouchMode="false"
        android:onClick="novoParticipante" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/listaPartNovaViagem"
        android:layout_below="@+id/btCriaParticipante"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20px" />

</RelativeLayout>