<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nova_despesa"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/despesa_motivo"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edMotivo"
        android:hint="Digite a causa/motivo do gasto"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/custo"
        android:id="@+id/textView6"
        android:layout_below="@+id/edMotivo"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginTop="48dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edCusto"
        android:layout_below="@+id/textView6"
        android:layout_toRightOf="@+id/textView5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pagantes"
        android:id="@+id/textView7"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/edCusto"
        android:layout_alignRight="@+id/btCancelaViagem"
        android:layout_alignEnd="@+id/btCancelaViagem"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerParticipantes"
        android:layout_below="@+id/textView7"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_aceitar"
        android:id="@+id/btAceitaViagem"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/spinnerParticipantes"
        android:layout_alignEnd="@+id/spinnerParticipantes"
        android:onClick="confirma"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancela"
        android:id="@+id/btCancelaViagem"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="cancela"/>

</RelativeLayout>